done: handle input decorator

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="cards-list">
     <app-playings-cards/>
-    <app-playings-cards/>
+    <app-playings-cards [shadow]="shadow1" />
 </div>
