--- a/src/app/components/playings-cards/playings-cards.component.html
+++ b/src/app/components/playings-cards/playings-cards.component.html
@@ -9,7 +9,7 @@
             </div>
         </header>
         <figure id="shadow">
-            <img src="/assets/img/Igris.webp" alt="Igris">
+            <img [src]=shadow.img [alt]=shadow.name>
             <figcaption>RanK : {{shadow.rank}} </figcaption>
             <div id="capacities">
                 <div class="capacity">
