done: send notification from child to parent

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+<app-search-bar (seachBouton)="increaseCount()" />
+count : {{count}}
 <div class="cards-list">
     <app-playings-cards/>
     <app-playings-cards [shadow]="shadow1" />
