--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@
 body, html {
     font-family: sans-serif;
     height: 100%;
-    background: linear-gradient(45deg, rgb(198, 16, 171), black);
+    /* background: linear-gradient(45deg, rgb(198, 16, 171), black); */
+    background: whitesmoke;
     transition: background 0.5s ease-in-out;
 }
